objects/EUR_CRM_ObjPromo_Target__c.object
<CustomObject>
    <description>Child object of the O/P header</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>PR PT is the 1st country using this field.</description>
        <label>Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>O/P Target (EU)</relationshipLabel>
        <relationshipName>O_P_Target_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Achieved__c</fullName>
        <formula>EUR_CRM_Actual_Volume_Bottles__c &gt;= EUR_CRM_Qty_Sell_in_Amount_Bottle__c &amp;&amp;
EUR_CRM_Actual_Volume_Bottles__c != 0 &amp;&amp;
EUR_CRM_Qty_Sell_in_Amount_Bottle__c != 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Achieved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_No_of_Display__c</fullName>
        <description>PR PT is the 1st country using this field.</description>
        <label>Actual No. of Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_No_of_Display_per_Brand__c</fullName>
        <description>PR PT is the 1st country using this field.</description>
        <label>Actual No. of Display per Brand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Number_of_Commitments__c</fullName>
        <label>Actual Number of Commitments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Quantity_Listing__c</fullName>
        <label>Actual Quantity (Listing)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Quantity_People__c</fullName>
        <label>Actual Quantity (People)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Quantity_Promo_Kits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For RU ON Trade 2 O/P</description>
        <label>Actual Quantity (Promo Kits)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Quantity_Spyder__c</fullName>
        <label>Actual Quantity (Spyder)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Quantity__c</fullName>
        <label>Actual Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Volume_Bottles__c</fullName>
        <label>Actual Volume (Bottles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Volume_Cartons__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Volume (Cartons)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Volume_Displays__c</fullName>
        <label>Actual Volume (Displays)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_BQS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BQS</label>
        <referenceTo>EUR_CRM_Size__c</referenceTo>
        <relationshipName>O_P_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_BQ__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand-Quality (EU)</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>O_P_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand (EU)</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipLabel>O/P Target (EU)</relationshipLabel>
        <relationshipName>OP_Target_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Commitment_Target_Dist_to_Goals__c</fullName>
        <description>This is used only for Indicating the Distance to Goals specific to Commitment Targets</description>
        <formula>IF(OR(EUR_CRM_Visit_Targets__c - EUR_CRM_Actual_Number_of_Commitments__c &lt; 0, ISBLANK(EUR_CRM_Actual_Number_of_Commitments__c)), 
IF(ISBLANK(EUR_CRM_Actual_Number_of_Commitments__c), EUR_CRM_Visit_Targets__c - 0, 0 ), EUR_CRM_Visit_Targets__c - EUR_CRM_Actual_Number_of_Commitments__c )</formula>
        <label>Commitments Distance to Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Consumer_List_Price__c</fullName>
        <description>For DK Effects Manager Interface - Pricing per SKU per Promo</description>
        <label>Consumer List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Consumer_Promotional_Price__c</fullName>
        <description>For DK Effects Manager Interface - Pricing per SKU per Promo</description>
        <label>Consumer Promotional Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cost_Price__c</fullName>
        <description>For DK Effects Manager Interface - Pricing per SKU per Promo</description>
        <label>Cost Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Reported_Ordered_Qty__c</fullName>
        <label>Customer Reported Ordered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distance_to_Goal_Displays__c</fullName>
        <formula>If( EUR_CRM_ObjPromo__r.RecordType.DeveloperName = &apos;EUR_BE_Off_Trade_Sales_Drive&apos;,EUR_CRM_Qty_Sell_in_Amount_Display__c - EUR_CRM_Actual_Volume_Displays__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance to Goal (Displays)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distance_to_Goal_Promo_Kits__c</fullName>
        <formula>if((EUR_CRM_Target_Quantity_Promo_Kits__c - EUR_CRM_Actual_Quantity_Promo_Kits__c &gt; 0), EUR_CRM_Target_Quantity_Promo_Kits__c - EUR_CRM_Actual_Quantity_Promo_Kits__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance to Goal (Promo Kits)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distance_to_Goal__c</fullName>
        <formula>If( EUR_CRM_ObjPromo__r.RecordType.DeveloperName = &apos;EUR_BE_Off_Trade_Secondary_placement_Spyder_display&apos;,EUR_CRM_Target_Quantity_Spyders__c - EUR_CRM_Actual_Quantity_Spyder__c,  EUR_CRM_Qty_Sell_in_Amount_Bottle__c - EUR_CRM_Actual_Volume_Bottles__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance to Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Grouping_Type__c</fullName>
        <label>Grouping Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottle</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Initially for PR DK - Effects Manager Interface - to reflect changes in Product changes in Effects Manager</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Quota__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Quota</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_O_P_Target__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>O/P Target</label>
        <referenceTo>EUR_CRM_ObjPromo_Target__c</referenceTo>
        <relationshipName>EUR_CRM_O_P_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_ObjPromo__c</fullName>
        <label>Objectives / Promotions</label>
        <referenceTo>EUR_CRM_ObjPromo__c</referenceTo>
        <relationshipName>O_P_Targets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_POS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the EU POSM catalogue</description>
        <label>POS Material (EU)</label>
        <referenceTo>EUR_CRM_POS_Material__c</referenceTo>
        <relationshipLabel>O/P Target (EU)</relationshipLabel>
        <relationshipName>OP_Target_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Percentage_Achieved_Promo_Kits__c</fullName>
        <description>For RU ON Trade 2 O/P</description>
        <formula>if(EUR_CRM_Target_Quantity_Promo_Kits__c!= 0, EUR_CRM_Actual_Quantity_Promo_Kits__c/EUR_CRM_Target_Quantity_Promo_Kits__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Achieved (Promo Kits)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Percentage_Achieved__c</fullName>
        <formula>if(EUR_CRM_Qty_Sell_in_Amount_Bottle__c != 0, EUR_CRM_Actual_Volume_Bottles__c/EUR_CRM_Qty_Sell_in_Amount_Bottle__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Achieved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Discount__c</fullName>
        <description>For DK Effects Manager Interface - Pricing per SKU per Promo</description>
        <label>Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Product_Level__c</fullName>
        <label>Product Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EUR_CRM_Quality__c</fullName>
                </value>
                <value>
                    <fullName>EUR_CRM_SKU__c</fullName>
                </value>
                <value>
                    <fullName>EUR_CRM_POS_Material__c</fullName>
                </value>
                <value>
                    <fullName>EUR_CRM_Brand__c</fullName>
                </value>
                <value>
                    <fullName>EUR_CRM_Size__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promotion_Type__c</fullName>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Razz Fazz</fullName>
                </value>
                <value>
                    <fullName>Standard Display</fullName>
                </value>
                <value>
                    <fullName>Promotion Display</fullName>
                </value>
                <value>
                    <fullName>Carton</fullName>
                </value>
                <value>
                    <fullName>Gondelkopf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Qty_Sell_in_Amount_Bottle__c</fullName>
        <label>Qty Sell in Amount Bottles</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Qty_Sell_in_Amount_Carton__c</fullName>
        <label>Qty Sell in Amount Carton</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Qty_Sell_in_Amount_Display__c</fullName>
        <label>Qty Sell in Amount Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>EUR_CRM_SKU__c</referenceTo>
        <relationshipName>O_P_Targets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Level__c</fullName>
        <formula>IF(OR(CONTAINS($RecordType.DeveloperName,&apos;Regional&apos;), CONTAINS($RecordType.DeveloperName,&apos;Manager&apos;)),&apos;Regional&apos;,
IF(CONTAINS($RecordType.DeveloperName,&apos;SR&apos;),&apos;Sales Rep&apos;,
IF(CONTAINS($RecordType.DeveloperName,&apos;Objective&apos;),&apos;Objective&apos;,
IF(CONTAINS($RecordType.DeveloperName,&apos;Sales&apos;),&apos;Sales Agency Managed&apos;,&apos;&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_No_of_Display__c</fullName>
        <description>PR PT is the 1st country using this field.</description>
        <label>Target No. of Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_No_of_Display_per_Brand__c</fullName>
        <description>PR PT is the 1st country using this field</description>
        <label>Target No. of Display per Brand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Target Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EUR_CRM_O_P_GenericTargets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Quantity_Listing__c</fullName>
        <label>Target Quantity (Listing)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Quantity_People__c</fullName>
        <label>Target Quantity (People)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Quantity_Promo_Kits__c</fullName>
        <defaultValue>0</defaultValue>
        <description>For RU ON Trade 2 O/P</description>
        <label>Target Quantity (Promo Kits)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Target_Quantity_Spyders__c</fullName>
        <label>Target Quantity (Spyders)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Unit_of_Measure__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unit of Measure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Targets__c</fullName>
        <label>Commitment Targets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>O/P Target (EU)</label>
    <listViews>
        <fullName>EUR_DK_OP_Targets_All</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_ObjPromo__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_Distance_to_Goal__c</columns>
        <columns>EUR_CRM_Actual_Volume_Bottles__c</columns>
        <columns>EUR_CRM_Actual_Volume_Displays__c</columns>
        <columns>EUR_CRM_Target_Level__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_BQ__c</columns>
        <columns>EUR_CRM_BQS__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_O_P_Target__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Target__c.EUR_DK_Objective_Product</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Target__c.EUR_DK_Objective_Volume_Target</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Target__c.EUR_DK_Manager_Volume_Target</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Target__c.EUR_DK_SR_Volume_Target</value>
        </filters>
        <label>All DK OP Targets</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_FI_OP_Targets_All</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_ObjPromo__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_Distance_to_Goal__c</columns>
        <columns>EUR_CRM_Actual_Volume_Bottles__c</columns>
        <columns>EUR_CRM_Actual_Volume_Displays__c</columns>
        <columns>EUR_CRM_Target_Level__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_BQ__c</columns>
        <columns>EUR_CRM_BQS__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_Target_Owner__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>All FI OP Targets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_PT_All_O_P_Target_View</fullName>
        <booleanFilter>(1 or 2) and 3</booleanFilter>
        <columns>EUR_CRM_ObjPromo__c</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_O_P_Target__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Brand__c</columns>
        <columns>EUR_CRM_Target_No_of_Display__c</columns>
        <columns>EUR_CRM_Target_No_of_Display_per_Brand__c</columns>
        <columns>EUR_CRM_Actual_No_of_Display__c</columns>
        <columns>EUR_CRM_Actual_No_of_Display_per_Brand__c</columns>
        <columns>EUR_CRM_Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Target__c.EUR_PT_Off_Trade_OP_Target_per_Account</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_ObjPromo_Target__c.EUR_PT_Off_Trade_OP_Target_per_Brand</value>
        </filters>
        <filters>
            <field>EUR_CRM_ObjPromo__c</field>
            <operation>equals</operation>
            <value>EUR PT Off Trade OP - No. of Display - 20161007 - 2</value>
        </filters>
        <label>EUR PT All O/P Target View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_PT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_O_P_Target</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_ObjPromo__c</columns>
        <columns>EUR_CRM_Is_Active__c</columns>
        <columns>EUR_CRM_Achieved__c</columns>
        <columns>EUR_CRM_Brand__c</columns>
        <columns>EUR_CRM_BQ__c</columns>
        <columns>EUR_CRM_Is_Quota__c</columns>
        <columns>EUR_CRM_O_P_Target__c</columns>
        <columns>EUR_CRM_SKU__c</columns>
        <columns>EUR_CRM_Target_Level__c</columns>
        <columns>EUR_CRM_Target_Owner__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>RUB</value>
        </filters>
        <label>EUR RU O/P Target</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>OPT-{0000000000}</displayFormat>
        <label>O/P Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>O/P Target (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Objective_Product</fullName>
        <active>true</active>
        <label>BE Objective Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Objective_Volume_Target</fullName>
        <active>true</active>
        <label>BE Objective Volume Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_SR_Volume_Target</fullName>
        <active>true</active>
        <label>BE SR Volume Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Objective_Commitment_Target</fullName>
        <active>true</active>
        <description>Target to record the number of Accounts that have successfully achieved a specific O/P - Objective Level</description>
        <label>Objective Commitment Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Objective_Product</fullName>
        <active>true</active>
        <label>Objective Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Objective_Volume_Target</fullName>
        <active>true</active>
        <label>Objective Volume Target (EU)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_SR_Commitment_Target</fullName>
        <active>true</active>
        <description>Target to record the number of Accounts that have successfully achieved a specific O/P - Sales Rep Level</description>
        <label>SR Commitment Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_SR_Volume_Target</fullName>
        <active>true</active>
        <label>SR Volume Target (EU)</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Objective_Listing_Target</fullName>
        <active>true</active>
        <label>Objective Listing Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Objective_Volume_Target</fullName>
        <active>true</active>
        <label>Objective Volume Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Regional_Listing_Target</fullName>
        <active>true</active>
        <label>Regional Listing Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Regional_Volume_Target</fullName>
        <active>true</active>
        <label>Regional Volume Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_SR_Listing_Target</fullName>
        <active>true</active>
        <label>SR Listing Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_SR_Volume_Target</fullName>
        <active>true</active>
        <label>SR Volume Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Sales_Agency_Managed_Target</fullName>
        <active>true</active>
        <label>Sales Agency Managed Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Manager_Volume_Target</fullName>
        <active>true</active>
        <label>DK Manager Volume Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Objective_Product</fullName>
        <active>true</active>
        <label>DK Objective Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Objective_Volume_Target</fullName>
        <active>true</active>
        <label>DK Objective Volume Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_SR_Volume_Target</fullName>
        <active>true</active>
        <label>DK SR Volume Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_OP_Target_per_Account</fullName>
        <active>true</active>
        <label>EUR PT Off Trade OP Target per Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_OP_Target_per_Brand</fullName>
        <active>true</active>
        <label>EUR PT Off Trade OP Target per Brand</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Manager_POSM_Target</fullName>
        <active>true</active>
        <label>RU Manager POSM Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Objective_POSM_Target</fullName>
        <active>true</active>
        <label>RU Objective POSM Target</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Objective_Product</fullName>
        <active>true</active>
        <label>RU Objective Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Sales_Rep_POSM_Target</fullName>
        <active>true</active>
        <label>RU Sales Rep POSM Target</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>